HexaEngine.DirectXTex/Native.cs


        // Converts the image from a planar format to an equivalent non-planar format

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int GenerateMipMaps(in Image* baseImage, in TexFilterFlags filter, in ulong levels, void* mipChain, [MarshalAs(UnmanagedType.Bool)] in bool allow1D = false);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int GenerateMipMaps2(Image* srcImages, in ulong nimages, in TexMetadata* metadata, in TexFilterFlags filter, in ulong levels, void* mipChain);

        // levels of '0' indicates a full mipchain, otherwise is generates that number of total levels (including the source base image)
        // Defaults to Fant filtering which is equivalent to a box filter

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int GenerateMipMaps3D(Image* baseImages, in ulong depth, in TexFilterFlags filter, in ulong levels, void* mipChain);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int GenerateMipMaps3D2(Image* srcImages, in ulong nimages, in TexMetadata* metadata, in TexFilterFlags filter, in ulong levels, void* mipChain);

        // levels of '0' indicates a full mipchain, otherwise is generates that number of total levels (including the source base image)
        // Defaults to Fant filtering which is equivalent to a box filter

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int ScaleMipMapsAlphaForCoverage(Image* srcImages, in ulong nimages, in TexMetadata* metadata, in ulong item, in float alphaReference, void* mipChain);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int PremultiplyAlpha(in Image* srcImage, in TexPmAlphaFlags flags, void* image);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int PremultiplyAlpha2(Image* srcImages, in ulong nimages, in TexMetadata* metadata, in TexPmAlphaFlags flags, void* result);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Compress(in Image* srcImage, in Format format, in TexCompressFlags compress, in float threshold, void* cImage);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Compress2(Image* srcImages, in ulong nimages, in TexMetadata* metadata, in Format format, in TexCompressFlags compress, in float threshold, void* cImages);

        // Note that threshold is only used by BC1. TEX_THRESHOLD_DEFAULT is a typical value to use

        [SupportedOSPlatform("windows")]
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Compress3(in ID3D11Device* pDevice, in Image* srcImage, in Format format, in TexCompressFlags compress, in float alphaWeight, void* image);

        [SupportedOSPlatform("windows")]
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Compress4(in ID3D11Device* pDevice, in Image* srcImages, in ulong nimages, in TexMetadata* metadata, in Format format, in TexCompressFlags compress, in float alphaWeight, void* cImages);

        // DirectCompute-based compression (alphaWeight is only used by BC7. 1.0 is the typical value to use)

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Decompress(in Image* cImage, in Format format, void* image);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Decompress2(Image* cImages, in ulong nimages, in TexMetadata* metadata, in Format format, void* images);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int ComputeNormalMap(in Image* srcImage, in CNMAPFlags flags, in float amplitude, in Format format, void* normalMap);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int ComputeNormalMap2(Image* srcImages, in ulong nimages, in TexMetadata* metadata, in CNMAPFlags flags, in float amplitude, in Format format, void* normalMaps);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int CopyRectangle(in Image* srcImage, in Rect* srcRect, in Image* dstImage, in TexFilterFlags filter, in ulong xOffset, in ulong yOffset);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int ComputeMSE(in Image* image1, in Image* image2, float* mse, float* mseV, in CMSEFlags flags = CMSEFlags.DEFAULT);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int EvaluateImage(in Image* image, in delegate*<Vector4*, ulong, ulong, void> pixelFunc);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int EvaluateImage2(Image* images, in ulong nimages, in TexMetadata* metadata, in delegate*<Vector4*, ulong, ulong, void> pixelFunc);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int TransformImage(in Image* image, in delegate*<Vector4*, Vector4*, ulong, ulong, void> pixelFunc, void* result);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int TransformImage2(Image* srcImages, in ulong nimages, in TexMetadata* metadata, in delegate*<Vector4*, Vector4*, ulong, ulong, void> pixelFunc, void* result);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial Guid* GetWICCodec(in WICCodecs codec);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial IWICImagingFactory* GetWICFactory(bool* iswic2);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial void SetWICFactory(IWICImagingFactory* pWIC);

        //---------------------------------------------------------------------------------
        // DDS helper functions
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int EncodeDDSHeader(in TexMetadata* metadata, DDSFlags flags, void* pDestination, in ulong maxsize, ulong* required);

        //---------------------------------------------------------------------------------
        // Direct3D 11 functions
        [SupportedOSPlatform("windows")]
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsSupportedTexture(in ID3D11Device* pDevice, in TexMetadata* metadata);

        [SupportedOSPlatform("windows")]
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int CreateTexture(in ID3D11Device* pDevice, Image* srcImages, in ulong nimages, in TexMetadata* metadata, ID3D11Resource** ppResource);

        [SupportedOSPlatform("windows")]
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int CreateShaderResourceView(in ID3D11Device* pDevice, Image* srcImages, in ulong nimages, in TexMetadata* metadata, ID3D11ShaderResourceView** ppSRV);

        [SupportedOSPlatform("windows")]
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int CreateTextureEx(in ID3D11Device* pDevice, Image* srcImages, in ulong nimages, in TexMetadata* metadata, in Usage usage, in uint bindFlags, in uint cpuAccessFlags, in uint miscFlags, [MarshalAs(UnmanagedType.Bool)] in bool forceSRGB, ID3D11Resource** ppResource);

        [SupportedOSPlatform("windows")]
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int CreateTextureEx2(in ID3D11Device* pDevice, void* img, in uint usage, in uint bindFlags, in uint cpuAccessFlags, in uint miscFlags, [MarshalAs(UnmanagedType.Bool)] in bool forceSRGB, ID3D11Resource** ppResource);

        [SupportedOSPlatform("windows")]
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int CreateShaderResourceViewEx(in ID3D11Device* pDevice, Image* srcImages, in ulong nimages, in TexMetadata* metadata, in Usage usage, in BindFlag bindFlags, in CpuAccessFlag cpuAccessFlags, in ResourceMiscFlag miscFlags, [MarshalAs(UnmanagedType.Bool)] in bool forceSRGB, ID3D11ShaderResourceView** ppSRV);

        [SupportedOSPlatform("windows")]
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int CaptureTexture(in ID3D11Device* pDevice, in ID3D11DeviceContext* pContext, in ID3D11Resource* pSource, void* result);
